--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-graveyard",
+  "name": "inspiralor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "socket.io": "^4.8.1",
